// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UpgradeAcknowledgeModal > Error is shown for failed y-stream approval action 1`] = `
<UpgradeAcknowledgeModal
  automaticUpgradePolicyId="myUpgradePolicyId"
  closeModal={[MockFunction]}
  clusterId="myClusterId"
  isOpen={true}
  modalData={
    Object {
      "fromVersion": "1.2.3",
      "toVersion": "1.3.4",
      "unmetAcknowledgements": Array [
        Object {
          "id": "unMetAck1",
        },
        Object {
          "id": "unMetAck2",
        },
      ],
    }
  }
  setGate={[MockFunction]}
  setUpgradePolicy={[MockFunction]}
>
  <Modal
    className="ocm-upgrade-ack-modal"
    isPending={false}
    isPrimaryDisabled={true}
    modalSize="medium"
    onClose={[Function]}
    onPrimaryClick={[Function]}
    onSecondaryClick={[Function]}
    primaryText="Approve and continue"
    secondaryText="Cancel"
    title="Administrator acknowledgement"
  >
    <Modal
      actions={
        Array [
          <Button
            data-testid="btn-primary"
            isDisabled={true}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Approve and continue
          </Button>,
          undefined,
          <Button
            data-testid="btn-secondary"
            onClick={[Function]}
            variant="secondary"
          >
            Cancel
          </Button>,
          undefined,
          undefined,
        ]
      }
      appendTo={[Function]}
      aria-describedby=""
      aria-label="Administrator acknowledgement"
      aria-labelledby=""
      className="ocm-upgrade-ack-modal"
      hasNoBodyWrapper={false}
      isOpen={true}
      onClose={[Function]}
      ouiaSafe={true}
      position="default"
      showClose={true}
      title="Administrator acknowledgement"
      titleIconVariant={null}
      titleLabel=""
      variant="small"
    >
      <Portal
        containerInfo={
          <div>
            <div
              class="pf-v5-c-backdrop"
            >
              <div
                class="pf-v5-l-bullseye"
              >
                <div
                  aria-describedby="pf-modal-part-4"
                  aria-label="Administrator acknowledgement"
                  aria-labelledby="pf-modal-part-2 pf-modal-part-3"
                  aria-modal="true"
                  class="pf-v5-c-modal-box ocm-upgrade-ack-modal pf-m-sm"
                  data-ouia-component-id="OUIA-Generated-Modal-small-3"
                  data-ouia-component-type="PF5/ModalContent"
                  data-ouia-safe="true"
                  id="pf-modal-part-2"
                  role="dialog"
                >
                  <div
                    class="pf-v5-c-modal-box__close"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Close"
                      class="pf-v5-c-button pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Modal-small-3-ModalBoxCloseButton"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 352 512"
                        width="1em"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                    </button>
                  </div>
                  <header
                    class="pf-v5-c-modal-box__header"
                  >
                    <h1
                      class="pf-v5-c-modal-box__title"
                      id="pf-modal-part-3"
                    >
                      <span
                        class="pf-v5-c-modal-box__title-text"
                      >
                        Administrator acknowledgement
                      </span>
                    </h1>
                  </header>
                  <div
                    class="pf-v5-c-modal-box__body"
                    id="pf-modal-part-4"
                  >
                    <div
                      class="pf-v5-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="OUIA-Generated-Alert-danger-1"
                      data-ouia-component-type="PF5/Alert"
                      data-ouia-safe="true"
                      data-testid="alert-error"
                      role="alert"
                    >
                      <div
                        class="pf-v5-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-v5-c-alert__title"
                      >
                        <span
                          class="pf-v5-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Failed to save administrator acknowledgement.
                      </h4>
                      <div
                        class="pf-v5-c-alert__description"
                      >
                        <span>
                          {"reason":"an error happened"}
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <footer
                    class="pf-v5-c-modal-box__footer"
                  >
                    <button
                      aria-disabled="true"
                      class="pf-v5-c-button pf-m-primary pf-m-disabled"
                      data-ouia-component-id="OUIA-Generated-Button-primary-5"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      data-testid="btn-primary"
                      disabled=""
                      type="submit"
                    >
                      Approve and continue
                    </button>
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-secondary"
                      data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      data-testid="btn-secondary"
                      type="button"
                    >
                      Cancel
                    </button>
                  </footer>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalContent
          actions={
            Array [
              <Button
                data-testid="btn-primary"
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                Approve and continue
              </Button>,
              undefined,
              <Button
                data-testid="btn-secondary"
                onClick={[Function]}
                variant="secondary"
              >
                Cancel
              </Button>,
              undefined,
              undefined,
            ]
          }
          aria-describedby=""
          aria-label="Administrator acknowledgement"
          aria-labelledby=""
          boxId="pf-modal-part-2"
          className="ocm-upgrade-ack-modal"
          descriptorId="pf-modal-part-4"
          hasNoBodyWrapper={false}
          isOpen={true}
          labelId="pf-modal-part-3"
          onClose={[Function]}
          ouiaId="OUIA-Generated-Modal-small-3"
          ouiaSafe={true}
          position="default"
          showClose={true}
          title="Administrator acknowledgement"
          titleIconVariant={null}
          titleLabel=""
          variant="small"
        >
          <Backdrop>
            <div
              className="pf-v5-c-backdrop"
            >
              <FocusTrap
                active={true}
                className="pf-v5-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                    "initialFocus": undefined,
                    "tabbableOptions": Object {
                      "displayCheck": "none",
                    },
                  }
                }
              >
                <div
                  className="pf-v5-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-4"
                    aria-label="Administrator acknowledgement"
                    aria-labelledby="pf-modal-part-2 pf-modal-part-3"
                    className="ocm-upgrade-ack-modal"
                    data-ouia-component-id="OUIA-Generated-Modal-small-3"
                    data-ouia-component-type="PF5/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-2"
                    position="default"
                    style={Object {}}
                    variant="small"
                  >
                    <div
                      aria-describedby="pf-modal-part-4"
                      aria-label="Administrator acknowledgement"
                      aria-labelledby="pf-modal-part-2 pf-modal-part-3"
                      aria-modal="true"
                      className="pf-v5-c-modal-box ocm-upgrade-ack-modal pf-m-sm"
                      data-ouia-component-id="OUIA-Generated-Modal-small-3"
                      data-ouia-component-type="PF5/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-2"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[Function]}
                        ouiaId="OUIA-Generated-Modal-small-3"
                      >
                        <div
                          className="pf-v5-c-modal-box__close"
                        >
                          <Button
                            aria-label="Close"
                            onClick={[Function]}
                            ouiaId="OUIA-Generated-Modal-small-3-ModalBoxCloseButton"
                            variant="plain"
                          >
                            <ButtonBase
                              aria-label="Close"
                              innerRef={null}
                              onClick={[Function]}
                              ouiaId="OUIA-Generated-Modal-small-3-ModalBoxCloseButton"
                              variant="plain"
                            >
                              <button
                                aria-disabled={false}
                                aria-label="Close"
                                className="pf-v5-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Modal-small-3-ModalBoxCloseButton"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <TimesIcon>
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    className="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 352 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                    />
                                  </svg>
                                </TimesIcon>
                              </button>
                            </ButtonBase>
                          </Button>
                        </div>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader
                        help={null}
                      >
                        <header
                          className="pf-v5-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            id="pf-modal-part-3"
                            title="Administrator acknowledgement"
                            titleIconVariant={null}
                            titleLabel=""
                          >
                            <h1
                              className="pf-v5-c-modal-box__title"
                              id="pf-modal-part-3"
                            >
                              <span
                                className="pf-v5-c-modal-box__title-text"
                              >
                                Administrator acknowledgement
                              </span>
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-4"
                      >
                        <div
                          className="pf-v5-c-modal-box__body"
                          id="pf-modal-part-4"
                        >
                          <ErrorBox
                            key="err-0"
                            message="Failed to save administrator acknowledgement."
                            response={
                              Object {
                                "error": true,
                                "errorCode": undefined,
                                "errorDetails": undefined,
                                "errorMessage": "{\\"reason\\":\\"an error happened\\"}",
                                "fulfilled": false,
                                "internalErrorCode": undefined,
                                "operationID": undefined,
                                "pending": false,
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              data-testid="alert-error"
                              isInline={true}
                              role="alert"
                              title="Failed to save administrator acknowledgement."
                              variant="danger"
                            >
                              <div
                                className="pf-v5-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id="OUIA-Generated-Alert-danger-1"
                                data-ouia-component-type="PF5/Alert"
                                data-ouia-safe={true}
                                data-testid="alert-error"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="alert"
                              >
                                <AlertIcon
                                  variant="danger"
                                >
                                  <div
                                    className="pf-v5-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon>
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        className="pf-v5-svg"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </AlertIcon>
                                <h4
                                  className="pf-v5-c-alert__title"
                                >
                                  <span
                                    className="pf-v5-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Failed to save administrator acknowledgement.
                                </h4>
                                <div
                                  className="pf-v5-c-alert__description"
                                >
                                  <span>
                                    {"reason":"an error happened"}
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-v5-c-modal-box__footer"
                        >
                          <Button
                            data-testid="btn-primary"
                            isDisabled={true}
                            key="confirm"
                            onClick={[Function]}
                            type="submit"
                            variant="primary"
                          >
                            <ButtonBase
                              data-testid="btn-primary"
                              innerRef={null}
                              isDisabled={true}
                              onClick={[Function]}
                              type="submit"
                              variant="primary"
                            >
                              <button
                                aria-disabled={true}
                                aria-label={null}
                                className="pf-v5-c-button pf-m-primary pf-m-disabled"
                                data-ouia-component-id="OUIA-Generated-Button-primary-5"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe={true}
                                data-testid="btn-primary"
                                disabled={true}
                                onClick={[Function]}
                                role={null}
                                tabIndex={null}
                                type="submit"
                              >
                                Approve and continue
                              </button>
                            </ButtonBase>
                          </Button>
                          <Button
                            data-testid="btn-secondary"
                            key="secondary"
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <ButtonBase
                              data-testid="btn-secondary"
                              innerRef={null}
                              onClick={[Function]}
                              variant="secondary"
                            >
                              <button
                                aria-disabled={false}
                                aria-label={null}
                                className="pf-v5-c-button pf-m-secondary"
                                data-ouia-component-id="OUIA-Generated-Button-secondary-5"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe={true}
                                data-testid="btn-secondary"
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </ButtonBase>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </div>
          </Backdrop>
        </ModalContent>
      </Portal>
    </Modal>
  </Modal>
</UpgradeAcknowledgeModal>
`;

exports[`<UpgradeAcknowledgeModal > Errors are shown for failed gates action 1`] = `
<UpgradeAcknowledgeModal
  automaticUpgradePolicyId="myUpgradePolicyId"
  closeModal={[MockFunction]}
  clusterId="myClusterId"
  isOpen={true}
  modalData={
    Object {
      "fromVersion": "1.2.3",
      "toVersion": "1.3.4",
      "unmetAcknowledgements": Array [
        Object {
          "id": "unMetAck1",
        },
        Object {
          "id": "unMetAck2",
        },
      ],
    }
  }
  setGate={[MockFunction]}
  setUpgradePolicy={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "enable_minor_version_upgrades": true,
          },
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <Modal
    className="ocm-upgrade-ack-modal"
    isPending={false}
    isPrimaryDisabled={true}
    modalSize="medium"
    onClose={[Function]}
    onPrimaryClick={[Function]}
    onSecondaryClick={[Function]}
    primaryText="Approve and continue"
    secondaryText="Cancel"
    title="Administrator acknowledgement"
  >
    <Modal
      actions={
        Array [
          <Button
            data-testid="btn-primary"
            isDisabled={true}
            onClick={[Function]}
            type="submit"
            variant="primary"
          >
            Approve and continue
          </Button>,
          undefined,
          <Button
            data-testid="btn-secondary"
            onClick={[Function]}
            variant="secondary"
          >
            Cancel
          </Button>,
          undefined,
          undefined,
        ]
      }
      appendTo={[Function]}
      aria-describedby=""
      aria-label="Administrator acknowledgement"
      aria-labelledby=""
      className="ocm-upgrade-ack-modal"
      hasNoBodyWrapper={false}
      isOpen={true}
      onClose={[Function]}
      ouiaSafe={true}
      position="default"
      showClose={true}
      title="Administrator acknowledgement"
      titleIconVariant={null}
      titleLabel=""
      variant="small"
    >
      <Portal
        containerInfo={
          <div>
            <div
              class="pf-v5-c-backdrop"
            >
              <div
                class="pf-v5-l-bullseye"
              >
                <div
                  aria-describedby="pf-modal-part-5"
                  aria-label="Administrator acknowledgement"
                  aria-labelledby="pf-modal-part-3 pf-modal-part-4"
                  aria-modal="true"
                  class="pf-v5-c-modal-box ocm-upgrade-ack-modal pf-m-sm"
                  data-ouia-component-id="OUIA-Generated-Modal-small-4"
                  data-ouia-component-type="PF5/ModalContent"
                  data-ouia-safe="true"
                  id="pf-modal-part-3"
                  role="dialog"
                >
                  <div
                    class="pf-v5-c-modal-box__close"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Close"
                      class="pf-v5-c-button pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Modal-small-4-ModalBoxCloseButton"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v5-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 352 512"
                        width="1em"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                    </button>
                  </div>
                  <header
                    class="pf-v5-c-modal-box__header"
                  >
                    <h1
                      class="pf-v5-c-modal-box__title"
                      id="pf-modal-part-4"
                    >
                      <span
                        class="pf-v5-c-modal-box__title-text"
                      >
                        Administrator acknowledgement
                      </span>
                    </h1>
                  </header>
                  <div
                    class="pf-v5-c-modal-box__body"
                    id="pf-modal-part-5"
                  >
                    <div
                      class="pf-v5-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="OUIA-Generated-Alert-danger-2"
                      data-ouia-component-type="PF5/Alert"
                      data-ouia-safe="true"
                      data-testid="alert-error"
                      role="alert"
                    >
                      <div
                        class="pf-v5-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-v5-c-alert__title"
                      >
                        <span
                          class="pf-v5-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Failed to save administrator acknowledgement.
                      </h4>
                      <div
                        class="pf-v5-c-alert__description"
                      >
                        <span>
                          {"reason":"an error happened"}
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                    <div
                      class="pf-v5-c-alert pf-m-inline pf-m-danger error-box"
                      data-ouia-component-id="OUIA-Generated-Alert-danger-3"
                      data-ouia-component-type="PF5/Alert"
                      data-ouia-safe="true"
                      data-testid="alert-error"
                      role="alert"
                    >
                      <div
                        class="pf-v5-c-alert__icon"
                      >
                        <svg
                          aria-hidden="true"
                          class="pf-v5-svg"
                          fill="currentColor"
                          height="1em"
                          role="img"
                          viewBox="0 0 512 512"
                          width="1em"
                        >
                          <path
                            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                          />
                        </svg>
                      </div>
                      <h4
                        class="pf-v5-c-alert__title"
                      >
                        <span
                          class="pf-v5-screen-reader"
                        >
                          Danger alert:
                        </span>
                        Failed to save administrator acknowledgement.
                      </h4>
                      <div
                        class="pf-v5-c-alert__description"
                      >
                        <span>
                          {"reason":"an error happened"}
                        </span>
                        <br />
                        <span>
                          Operation ID: N/A
                        </span>
                      </div>
                    </div>
                  </div>
                  <footer
                    class="pf-v5-c-modal-box__footer"
                  >
                    <button
                      aria-disabled="true"
                      class="pf-v5-c-button pf-m-primary pf-m-disabled"
                      data-ouia-component-id="OUIA-Generated-Button-primary-7"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      data-testid="btn-primary"
                      disabled=""
                      type="submit"
                    >
                      Approve and continue
                    </button>
                    <button
                      aria-disabled="false"
                      class="pf-v5-c-button pf-m-secondary"
                      data-ouia-component-id="OUIA-Generated-Button-secondary-7"
                      data-ouia-component-type="PF5/Button"
                      data-ouia-safe="true"
                      data-testid="btn-secondary"
                      type="button"
                    >
                      Cancel
                    </button>
                  </footer>
                </div>
              </div>
            </div>
          </div>
        }
      >
        <ModalContent
          actions={
            Array [
              <Button
                data-testid="btn-primary"
                isDisabled={true}
                onClick={[Function]}
                type="submit"
                variant="primary"
              >
                Approve and continue
              </Button>,
              undefined,
              <Button
                data-testid="btn-secondary"
                onClick={[Function]}
                variant="secondary"
              >
                Cancel
              </Button>,
              undefined,
              undefined,
            ]
          }
          aria-describedby=""
          aria-label="Administrator acknowledgement"
          aria-labelledby=""
          boxId="pf-modal-part-3"
          className="ocm-upgrade-ack-modal"
          descriptorId="pf-modal-part-5"
          hasNoBodyWrapper={false}
          isOpen={true}
          labelId="pf-modal-part-4"
          onClose={[Function]}
          ouiaId="OUIA-Generated-Modal-small-4"
          ouiaSafe={true}
          position="default"
          showClose={true}
          title="Administrator acknowledgement"
          titleIconVariant={null}
          titleLabel=""
          variant="small"
        >
          <Backdrop>
            <div
              className="pf-v5-c-backdrop"
            >
              <FocusTrap
                active={true}
                className="pf-v5-l-bullseye"
                focusTrapOptions={
                  Object {
                    "clickOutsideDeactivates": true,
                    "initialFocus": undefined,
                    "tabbableOptions": Object {
                      "displayCheck": "none",
                    },
                  }
                }
              >
                <div
                  className="pf-v5-l-bullseye"
                >
                  <ModalBox
                    aria-describedby="pf-modal-part-5"
                    aria-label="Administrator acknowledgement"
                    aria-labelledby="pf-modal-part-3 pf-modal-part-4"
                    className="ocm-upgrade-ack-modal"
                    data-ouia-component-id="OUIA-Generated-Modal-small-4"
                    data-ouia-component-type="PF5/ModalContent"
                    data-ouia-safe={true}
                    id="pf-modal-part-3"
                    position="default"
                    style={Object {}}
                    variant="small"
                  >
                    <div
                      aria-describedby="pf-modal-part-5"
                      aria-label="Administrator acknowledgement"
                      aria-labelledby="pf-modal-part-3 pf-modal-part-4"
                      aria-modal="true"
                      className="pf-v5-c-modal-box ocm-upgrade-ack-modal pf-m-sm"
                      data-ouia-component-id="OUIA-Generated-Modal-small-4"
                      data-ouia-component-type="PF5/ModalContent"
                      data-ouia-safe={true}
                      id="pf-modal-part-3"
                      role="dialog"
                      style={Object {}}
                    >
                      <ModalBoxCloseButton
                        onClose={[Function]}
                        ouiaId="OUIA-Generated-Modal-small-4"
                      >
                        <div
                          className="pf-v5-c-modal-box__close"
                        >
                          <Button
                            aria-label="Close"
                            onClick={[Function]}
                            ouiaId="OUIA-Generated-Modal-small-4-ModalBoxCloseButton"
                            variant="plain"
                          >
                            <ButtonBase
                              aria-label="Close"
                              innerRef={null}
                              onClick={[Function]}
                              ouiaId="OUIA-Generated-Modal-small-4-ModalBoxCloseButton"
                              variant="plain"
                            >
                              <button
                                aria-disabled={false}
                                aria-label="Close"
                                className="pf-v5-c-button pf-m-plain"
                                data-ouia-component-id="OUIA-Generated-Modal-small-4-ModalBoxCloseButton"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe={true}
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                <TimesIcon>
                                  <svg
                                    aria-hidden={true}
                                    aria-labelledby={null}
                                    className="pf-v5-svg"
                                    fill="currentColor"
                                    height="1em"
                                    role="img"
                                    viewBox="0 0 352 512"
                                    width="1em"
                                  >
                                    <path
                                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                    />
                                  </svg>
                                </TimesIcon>
                              </button>
                            </ButtonBase>
                          </Button>
                        </div>
                      </ModalBoxCloseButton>
                      <ModalBoxHeader
                        help={null}
                      >
                        <header
                          className="pf-v5-c-modal-box__header"
                        >
                          <ModalBoxTitle
                            id="pf-modal-part-4"
                            title="Administrator acknowledgement"
                            titleIconVariant={null}
                            titleLabel=""
                          >
                            <h1
                              className="pf-v5-c-modal-box__title"
                              id="pf-modal-part-4"
                            >
                              <span
                                className="pf-v5-c-modal-box__title-text"
                              >
                                Administrator acknowledgement
                              </span>
                            </h1>
                          </ModalBoxTitle>
                        </header>
                      </ModalBoxHeader>
                      <ModalBoxBody
                        id="pf-modal-part-5"
                      >
                        <div
                          className="pf-v5-c-modal-box__body"
                          id="pf-modal-part-5"
                        >
                          <ErrorBox
                            key="err-0"
                            message="Failed to save administrator acknowledgement."
                            response={
                              Object {
                                "error": true,
                                "errorCode": undefined,
                                "errorDetails": undefined,
                                "errorMessage": "{\\"reason\\":\\"an error happened\\"}",
                                "fulfilled": false,
                                "internalErrorCode": undefined,
                                "operationID": undefined,
                                "pending": false,
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              data-testid="alert-error"
                              isInline={true}
                              role="alert"
                              title="Failed to save administrator acknowledgement."
                              variant="danger"
                            >
                              <div
                                className="pf-v5-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id="OUIA-Generated-Alert-danger-2"
                                data-ouia-component-type="PF5/Alert"
                                data-ouia-safe={true}
                                data-testid="alert-error"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="alert"
                              >
                                <AlertIcon
                                  variant="danger"
                                >
                                  <div
                                    className="pf-v5-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon>
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        className="pf-v5-svg"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </AlertIcon>
                                <h4
                                  className="pf-v5-c-alert__title"
                                >
                                  <span
                                    className="pf-v5-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Failed to save administrator acknowledgement.
                                </h4>
                                <div
                                  className="pf-v5-c-alert__description"
                                >
                                  <span>
                                    {"reason":"an error happened"}
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                          <ErrorBox
                            key="err-1"
                            message="Failed to save administrator acknowledgement."
                            response={
                              Object {
                                "error": true,
                                "errorCode": undefined,
                                "errorDetails": undefined,
                                "errorMessage": "{\\"reason\\":\\"an error happened\\"}",
                                "fulfilled": false,
                                "internalErrorCode": undefined,
                                "operationID": undefined,
                                "pending": false,
                              }
                            }
                          >
                            <Alert
                              className="error-box"
                              data-testid="alert-error"
                              isInline={true}
                              role="alert"
                              title="Failed to save administrator acknowledgement."
                              variant="danger"
                            >
                              <div
                                className="pf-v5-c-alert pf-m-inline pf-m-danger error-box"
                                data-ouia-component-id="OUIA-Generated-Alert-danger-3"
                                data-ouia-component-type="PF5/Alert"
                                data-ouia-safe={true}
                                data-testid="alert-error"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                role="alert"
                              >
                                <AlertIcon
                                  variant="danger"
                                >
                                  <div
                                    className="pf-v5-c-alert__icon"
                                  >
                                    <ExclamationCircleIcon>
                                      <svg
                                        aria-hidden={true}
                                        aria-labelledby={null}
                                        className="pf-v5-svg"
                                        fill="currentColor"
                                        height="1em"
                                        role="img"
                                        viewBox="0 0 512 512"
                                        width="1em"
                                      >
                                        <path
                                          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                                        />
                                      </svg>
                                    </ExclamationCircleIcon>
                                  </div>
                                </AlertIcon>
                                <h4
                                  className="pf-v5-c-alert__title"
                                >
                                  <span
                                    className="pf-v5-screen-reader"
                                  >
                                    Danger alert:
                                  </span>
                                  Failed to save administrator acknowledgement.
                                </h4>
                                <div
                                  className="pf-v5-c-alert__description"
                                >
                                  <span>
                                    {"reason":"an error happened"}
                                  </span>
                                  <br />
                                  <span>
                                    Operation ID: N/A
                                  </span>
                                </div>
                              </div>
                            </Alert>
                          </ErrorBox>
                        </div>
                      </ModalBoxBody>
                      <ModalBoxFooter>
                        <footer
                          className="pf-v5-c-modal-box__footer"
                        >
                          <Button
                            data-testid="btn-primary"
                            isDisabled={true}
                            key="confirm"
                            onClick={[Function]}
                            type="submit"
                            variant="primary"
                          >
                            <ButtonBase
                              data-testid="btn-primary"
                              innerRef={null}
                              isDisabled={true}
                              onClick={[Function]}
                              type="submit"
                              variant="primary"
                            >
                              <button
                                aria-disabled={true}
                                aria-label={null}
                                className="pf-v5-c-button pf-m-primary pf-m-disabled"
                                data-ouia-component-id="OUIA-Generated-Button-primary-7"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe={true}
                                data-testid="btn-primary"
                                disabled={true}
                                onClick={[Function]}
                                role={null}
                                tabIndex={null}
                                type="submit"
                              >
                                Approve and continue
                              </button>
                            </ButtonBase>
                          </Button>
                          <Button
                            data-testid="btn-secondary"
                            key="secondary"
                            onClick={[Function]}
                            variant="secondary"
                          >
                            <ButtonBase
                              data-testid="btn-secondary"
                              innerRef={null}
                              onClick={[Function]}
                              variant="secondary"
                            >
                              <button
                                aria-disabled={false}
                                aria-label={null}
                                className="pf-v5-c-button pf-m-secondary"
                                data-ouia-component-id="OUIA-Generated-Button-secondary-7"
                                data-ouia-component-type="PF5/Button"
                                data-ouia-safe={true}
                                data-testid="btn-secondary"
                                disabled={false}
                                onClick={[Function]}
                                role={null}
                                type="button"
                              >
                                Cancel
                              </button>
                            </ButtonBase>
                          </Button>
                        </footer>
                      </ModalBoxFooter>
                    </div>
                  </ModalBox>
                </div>
              </FocusTrap>
            </div>
          </Backdrop>
        </ModalContent>
      </Portal>
    </Modal>
  </Modal>
</UpgradeAcknowledgeModal>
`;
